@@ -1,0 +1,68 @@
+<?php
+
+declare(strict_types=1);
+
+namespace Tpwd\KeSearch\Utility;
+
+use Tpwd\KeSearch\Lib\SearchHelper;
+
+class AdditionalWordCharactersUtility
+{
+    public static function getAdditionalWordCharacters(): array
+    {
+        $extConf = SearchHelper::getExtConf();
+        $additionalWordCharacters = [];
+        if (!empty($extConf['additionalWordCharacters'] ?? '')) {
+            foreach (str_split($extConf['additionalWordCharacters']) as $char) {
+                $additionalWordCharacters[] = $char;
+            }
+        }
+        return $additionalWordCharacters;
+    }
+
+    public static function getAdditionalContent(string $content): string
+    {
+        $additionalWordCharacters = self::getAdditionalWordCharacters();
+        if (empty($additionalWordCharacters)) {
+            return '';
+        }
+        $additionalContent = '';
+        foreach ($additionalWordCharacters as $additionalWordCharacter) {
+            $matches = [];
+            $pattern = '/(?=(?:[^\s]*[' . $additionalWordCharacter . ']){1,})\S+/';
+            preg_match($pattern, $content, $matches);
+            if ($matches) {
+                if (!empty($additionalContent)) {
+                    $additionalContent .= ' ';
+                }
+                $additionalContent .= str_replace(
+                    $additionalWordCharacter,
+                    self::getReplacementForAdditionalWordCharacter($additionalWordCharacter),
+                    implode(' ', $matches)
+                );
+            }
+        }
+        return $additionalContent;
+    }
+
+    public static function replaceAdditionalWordCharacters(string $content): string
+    {
+        $additionalWordCharacters = self::getAdditionalWordCharacters();
+        if (empty($additionalWordCharacters)) {
+            return '';
+        }
+        foreach ($additionalWordCharacters as $additionalWordCharacter) {
+            $content = str_replace(
+                $additionalWordCharacter,
+                self::getReplacementForAdditionalWordCharacter($additionalWordCharacter),
+                $content
+            );
+        }
+        return $content;
+    }
+
+    public static function getReplacementForAdditionalWordCharacter(string $character): string
+    {
+        return '___' . ord($character) . '___';
+    }
+}
